<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saikrishna.jtrivia.StatsActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/stats"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginStart="34dp"
        android:layout_marginTop="36dp"
        android:text="@string/correct"
        android:textSize="20dp"/>

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:max="100"
        android:layout_above="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginBottom="34dp" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/progressBar4"
        android:textSize="20dp"
        android:text="0%"/>

    <Button
        android:id="@+id/quit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/quit"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/progressBar4" />

    <Button
        android:id="@+id/tryagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/quit1"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/tryagain" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/percent"
        android:layout_centerVertical="true"
        android:text="@string/text"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/FinalText"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
