<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saikrishna.jtrivia.TriviaActivity">
    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="19dp"
        android:background="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/timeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeLeft"
        android:textSize="20dp"
        android:background="@android:color/holo_blue_light"
        android:layout_alignBaseline="@+id/question"
        android:layout_alignBottom="@+id/question"
        android:layout_toStartOf="@+id/seconds"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/timeLeft"
        android:layout_marginEnd="10dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/time"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/question"
        android:layout_alignStart="@+id/question"
        android:layout_alignEnd="@+id/seconds" />

    <TextView
        android:id="@+id/ques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="15dp"
        android:textSize="15dp"/>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignStart="@+id/timeLeft" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ques"
        android:layout_below="@+id/ques"
        android:layout_marginTop="17dp"
        android:id="@+id/relativeLayout"
        android:layout_alignEnd="@+id/imageView2">

    </RelativeLayout>

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_marginBottom="14dp"
        android:text="@string/quit" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignBaseline="@+id/quit"
        android:layout_alignBottom="@+id/quit"
        android:layout_alignEnd="@+id/relativeLayout" />

    <TextView
        android:id="@+id/loadingImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadingImg"
        android:textSize="20dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toStartOf="@+id/seconds" />
</RelativeLayout>
